--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
     <head>
         <title>Getting Started</title>
+        <link rel="stylesheet" href="./style/style.css">
     </head>
     <body>
+        <header>
+            <h1>Movie List</h1>
+        </header>
         <div id='app'></div>
         <script src="./dist/main.js"></script>
     </body>
